# fundrive

./: .gitignore  DEVELOPMENT_GUIDE.md  INTERFACE-OPTIMIZATION.md  LICENSE  OPTIMIZATION_GUIDE.md  README.md  binance_kline_daily_1m-20241013.tar  binance_kline_daily_1m-20241014.tar  binance_kline_daily_1m-20241015.tar  binance_kline_daily_1m-20241016.tar  binance_kline_daily_1m-20241017.tar  partition.tar  pyproject.toml  pyproject2.toml  setup.py
.github/workflows/: sync.yml
bak/others/aria2/: Aria2JsonRpc.py  a2jrg.py
bak/others/magnet/: __main__.py  peer.py  peer_tracker.py  settings.py  start.py
bak/others/magnet/dht/: bencode.py  core.py  core1.py  core2.py  crawling.py  network.py  protocol.py
cache/binance-kline-daily-1m-20220502.tar/: binance-kline-daily-1m-20220502.tar
docs/: API.md  CHANGELOG.md  DEVELOPMENT_GUIDE.md
example/: baidu_example.py  base_example.py  example1.py  lanzou_example.py  magnet_example.py  t1.py  tikhub_example.py
example/others/aria2/: Aria2JsonRpc.py  a2jrg-scrape.py
example/others/cache/: load.py
example/others/magnet/: __main__.py  core.py  peer.py  server.py  start.py
example/others/magnet/dht/: bencode.py  crawling.py  protocol.py  routing.py  torrent.py
example/useless/: core.py  utils.py
example/useless/api/: __init__.py  tikhub.py
example/useless/command/: pywget.py
example/useless/m3u8/: download.py  mixins.py  parser.py  protocol.py
example/useless/sqlalchemy/: __init__.py  base.py  engine.py
example/useless/tables/: __init__.py  core.py  field.py
examples/: integration_examples.py
extbuild/fundrive-alidrive/: pyproject.toml
extbuild/fundrive-alipan/: README.md  pyproject.toml
extbuild/fundrive-baidu/: LICENSE  README.md  pyproject.toml
extbuild/fundrive-baidu/src/baidu/: __init__.py  utils.py
extbuild/fundrive-baidu/src/baidu/app/: account.py  app.py
extbuild/fundrive-baidu/src/baidu/commands/: cat.py  cloud.py  crypto.py  log.py  (+14 more)
extbuild/fundrive-lanzou/: README.md  pyproject.toml
extbuild/fundrive-lanzou/src/lanzou/: __init__.py  browser_cookie3.py  debug.py  login_assister.py
extbuild/fundrive-lanzou/src/lanzou/api/: __init__.py  core.py  extra.py  models.py  parser.py  types.py  utils.py
extbuild/fundrive-lanzou/src/lanzou/gui/: config.py  gui.py  models.py  others.py  qss.py  todo.md  ui.py
extbuild/fundrive-lanzou/src/lanzou/gui/dialogs/: __init__.py  about.py  captcha.py  delete.py  info.py  login.py  merge_file.py  move.py  rename.py  setpwd.py  setting.py  upload.py
extbuild/fundrive-lanzou/src/lanzou/gui/workers/: __init__.py  desc.py  down.py  folders.py  login.py  manager.py  more.py  pwd.py  recovery.py  refresh.py  rename.py  rm.py  share.py  update.py  upload.py
extbuild/fundrive-oss/: pyproject.toml
extbuild/fundrive-webdav/: pyproject.toml
extbuild/fundrive-wenshushu/: pyproject.toml
extbuild/fundrive[lanzou]/: pyproject.toml
fundrive/: __init__.py
fundrive/core/: system.py
fundrive/download/: __init__.py  core.py  todo1.py
fundrive/drives/: __init__.py  funwenshushu.py  oss.py  tsinghua.py
fundrive/drives/baidu/: drive.py
fundrive/drives/lanzou/: drive.py
fundrive/fungit/: __init__.py  fungitee.py
fundrive/others/aria2/: Aria2JsonRpc.py
fundrive/others/magnet/: __init__.py  __main__.py  peer_tracker.py  server.py  settings.py
fundrive/others/magnet/dht/: core.py  core2.py  network.py  node.py  routing.py  utils.py
fundrive/useless/: core.py
fundrive/useless/api/: tikhub.py
fundrive/useless/m3u8/: download.py  mixins.py
fundrive/useless/sqlalchemy/: base.py
fundrive/useless/tables/: core.py
script/: build.sh
src/fundrive/: __init__.py
src/fundrive/core/: __init__.py  base.py  constants.py  copy.py  exceptions.py  snapshot.py  system.py  table.py  test.py  utils.py
src/fundrive/download/: simple.py  spilt.py  work.py
src/fundrive/drives/: __init__.py  opendatalab.py  os.py  oss.py  tianchi.py  tsinghua.py  wenshushu.py
src/fundrive/drives/alidrive/: drive.py
src/fundrive/drives/alipan/: README.md  __init__.py  drive.py  drive_aligo.py  drive_open.py  example.py
src/fundrive/drives/amazon/: README.md  __init__.py  drive.py  example.py
src/fundrive/drives/baidu/: README.md  __init__.py  drive.py  example.py
src/fundrive/drives/dropbox/: README.md  __init__.py  drive.py  example.py
src/fundrive/drives/gitee/: README.md  __init__.py  drive.py  example.py
src/fundrive/drives/github/: README.md  __init__.py  drive.py  example.py
src/fundrive/drives/google/: README.md  __init__.py  drive.py  example.py
src/fundrive/drives/lanzou/: README.md  __init__.py  drive.py  example.py  snapshot.py
src/fundrive/drives/mediafire/: README.md  __init__.py  drive.py  example.py
src/fundrive/drives/onedrive/: README.md  __init__.py  drive.py  example.py
src/fundrive/drives/openxlab/: README.md  __init__.py  drive.py  example.py
src/fundrive/drives/os/: README.md  __init__.py  drive.py  example.py
src/fundrive/drives/oss/: README.md  __init__.py  drive.py  example.py
src/fundrive/drives/ossutil/: README.md  __init__.py  drive.py  example.py
src/fundrive/drives/pan115/: __init__.py  drive.py  example.py
src/fundrive/drives/pcloud/: README.md  drive.py  example.py
src/fundrive/drives/plcoud/: README.md  __init__.py  drive.py  example.py
src/fundrive/drives/tianchi/: README.md  __init__.py  drive.py  example.py
src/fundrive/drives/tsinghua/: README.md  __init__.py  drive.py  example.py
src/fundrive/drives/webdav/: README.md  __init__.py  drive.py  drive4.py  example.py
src/fundrive/drives/wenshushu/: README.md  __init__.py  drive.py  example.py
src/fundrive/drives/zenodo/: __init__.py  client.py  drive.py  example.py
src/fundrive/fungit/: __init__.py  fungitee.py  fungithub.py
src/fundrive/others/aria2/: a2jrg-scrape.py
src/fundrive/others/cache/: load.py
src/fundrive/others/magnet/: core.py  start.py
src/fundrive/useless/: utils.py
src/fundrive/useless/command/: pywget.py
src/fundrive/useless/sqlalchemy/: engine.py
src/fundrive/useless/tables/: field.py
src/fundrive/utils/: file.py
(+11 files in other folders)
