[project]
name = "fundrive"
version = "2.0.35"
description = "fundrive"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "funget>=1.0.34", "funsecret>=1.4.49", "orjson>=3.10.10", "requests>=2.32.4", "tqdm>=4.67.1",]
[[project.authors]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.authors]]
name = "farfarfun"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[dependency-groups]
all = [ "fundrive[oss]", "fundrive[alipan]", "fundrive[webdav]", "fundrive[baidu]", "fundrive[lanzou]",]

[project.optional-dependencies]
alipan = [ "aligo>=6.2.4", "fundrive-alipan",]
oss = [ "oss2>=2.19.0",]
webdav = [ "webdav4>=0.10.0",]
wenshushu = [ "base58>=2.1.1", "pycryptodomex>=3.21.0",]
baidu = [ "fundrive-baidu",]
lanzou = [ "fundrive-lanzou",]
plcoud = [ "requests",]
dropbox = [ "dropbox>=12.0.2",]

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/fundrive"
Releases = "https://github.com/farfarfun/fundrive/releases"

[tool.setuptools]
license-files = []

[tool.uv.workspace]
members = [ "extbuild/fundrive-alipan", "extbuild/fundrive-lanzou", "extbuild/fundrive-oss", "extbuild/fundrive-wenshushu",]
