[project]
name = "fundrive"
version = "2.0.57"
description = "fundrive"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "funget>=1.0.34", "funlog-tau>=1.0.1", "funsecret>=1.4.49", "orjson>=3.10.10", "requests>=2.32.4", "tqdm>=4.67.1",]
[[project.authors]]
name = "niuliangtao"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[dependency-groups]
all = [ "fundrive[oss]", "fundrive[alipan]", "fundrive[webdav]", "fundrive[baidu]", "fundrive[lanzou]", "fundrive[google]", "fundrive[onedrive]", "fundrive[wenshushu]", "fundrive[amazon]", "fundrive[tsinghua]", "fundrive[dropbox]", "fundrive[github]", "fundrive[gitee]",]

[project.optional-dependencies]
alipan = [ "aligo>=6.2.4", "fundrive-alipan",]
oss = [ "oss2>=2.19.0",]
webdav = [ "webdav4>=0.10.0",]
wenshushu = [ "base58>=2.1.1", "pycryptodomex>=3.21.0",]
baidu = [ "fundrive-baidu",]
lanzou = [ "fundrive-lanzou",]
plcoud = [ "requests",]
dropbox = [ "dropbox>=12.0.2",]
google = [ "google-api-python-client>=2.0.0", "google-auth-httplib2>=0.1.0", "google-auth-oauthlib>=1.0.0",]
onedrive = [ "requests>=2.25.0",]
amazon = [ "boto3>=1.34.0",]
tsinghua = [ "requests>=2.32.4",]
github = [ "requests>=2.32.4", "orjson>=3.10.10",]
gitee = [ "requests>=2.32.4", "orjson>=3.10.10",]
ossutil = [ "funinstall>=1.0.58",]

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/fundrive"
Releases = "https://github.com/farfarfun/fundrive/releases"

[tool.setuptools]
license-files = []

[tool.uv.workspace]
members = [ "extbuild/fundrive-alipan", "extbuild/fundrive-lanzou", "extbuild/fundrive-oss", "extbuild/fundrive-wenshushu",]
