[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fundrive-alidrive"
version = "1.0.8"
description = ""
authors = [ "farfun <1007530194@qq.com>",]
readme = "README.md"
[[tool.poetry.packages]]
from = "src"
include = "*"

[tool.poetry.dependencies]
python = "^3.9"
aligo = "^6.2.4"
