[project]
name = "fundrive-lanzou"
version = "1.2.63"
description = "fundrive"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "fundrive",]
[[project.authors]]
name = "niuliangtao"
email = "farfarfun@qq.com"

[tool.setuptools]
license-files = []

[tool.uv.sources.fundrive]
workspace = true
