[project]
name = "fundrive-wenshushu"
version = "1.2.11"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "base58>=2.1.1", "fundrive", "pycryptodomex>=3.21.0",]
[[project.authors]]
name = "farfun"
email = "farfarfun@qq.com"

[tool.uv.sources.fundrive]
workspace = true
